--- a/app/di.yml
+++ b/app/di.yml
@@ -168,6 +168,10 @@ services:
     class: 'QL\Hal\Twig\GithubExtension'
     arguments: [@url.helper, @github]
 
+  twig.extension.ansi:
+    class: 'SensioLabs\AnsiConverter\Bridge\Twig\AnsiExtension'
+    arguments: [@ansi.converter]
+
   # Twig Environment
   twig.environment:
     parent: 'panthor.twig.environment'
@@ -175,12 +179,20 @@ services:
       - ['addExtension', [@twig.extension.hal]]
       - ['addExtension', [@twig.extension.permissions]]
       - ['addExtension', [@twig.extension.github]]
+      - ['addExtension', [@twig.extension.ansi]]
 
   # The primary twig template. All other twig services should use this service as a parent
   twig.template.old:
     class: 'Twig_Template'
     factory_service: 'twig.environment'
     factory_method: 'loadTemplate'
+
+  ansi.converter:
+    class: 'SensioLabs\AnsiConverter\AnsiToHtmlConverter'
+    arguments: [@ansi.convert.theme, true]
+
+  ansi.convert.theme:
+    class: 'SensioLabs\AnsiConverter\Theme\Theme'
 
   ######################################################################################################################
   # MIDDLEWARE
