--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,7 @@
         "ql/mcp-logger": "1.3.*",
         "ql/panthor": "~1.1",
         "slim/slim": "2.4.*",
+        "sensiolabs/ansi-to-html": "~1.1",
         "symfony/dependency-injection": "~2.5",
         "symfony/config": "~2.5",
         "symfony/debug": "~2.5",
