Adding new permission groups. Switch super admin bouncer to use super admin permissions service method. Update DI to use the correct super admin bouncer.

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ atlassian-ide-plugin.xml
 /public/css/
 /public/img/
 /public/js/
+npm-debug.log
+public/style.css
 
 # package installation
 /bower_components/
