--- a/app/environment/dev.yml
+++ b/app/environment/dev.yml
@@ -1,7 +1,7 @@
 parameters:
     application.title: 'HAL 9000 DEV'
 
-    debug: truez
+    debug: true
     twig.debug: true
 
     doctrine.connection:
