--- a/app/di.yml
+++ b/app/di.yml
@@ -345,6 +345,13 @@ services:
     class: 'QL\Hal\Api\UserNormalizer'
     arguments: [@api.helper, @url.helper]
 
+  api.eventlog.normalizer:
+    class: 'QL\Hal\Api\EventLogNormalizer'
+    arguments:
+        - @api.helper
+        - @time.helper
+        - @url.helper
+
   ######################################################################################################################
   # Github API
   ######################################################################################################################
