Update to job id generator from hal-core

--- a/app/config.global.yml
+++ b/app/config.global.yml
@@ -51,6 +51,7 @@ parameters:
     ############################################################################
 
     unique.alphabet: '123456789abcdefghijkmnopqrstuvwxyzABCDEFGHJKLMNPQRSTUVWXYZ'
+    unique.size: 4
     date.timezone: 'America/Detroit'
 
     ############################################################################
