Update hal-core to stable 2.4

--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,6 @@
     },
     "repositories": [
         {
-            "type": "vcs",
-            "url": "git@git:web-core/hal-core.git"
-        },
-        {
             "type": "composer",
             "url": "http://composer/"
         }
@@ -30,7 +26,7 @@
         "predis/predis": "~1.0",
         "psr/log": "*",
         "ql/exception-toolkit": "~0.1",
-        "ql/hal-core": "dev-master",
+        "ql/hal-core": "2.4.*",
         "ql/http-problem": "~1.0",
         "ql/mcp-cache": "~2.2",
         "ql/mcp-core": "1.*",
