Embed server on deployment resource. Fix server->depoyment resolution bug. Fix infinite recursive resolution bug.

--- a/app/di.api.yml
+++ b/app/di.api.yml
@@ -80,6 +80,7 @@ services:
         arguments:
             - @response.formatter
             - @deployment.repo
+            - @normalizer.deployment
 
     api.deployments:
         class: 'QL\Hal\Controllers\Api\Deployment\DeploymentsController'
